fix background behind page title

--- a/src/css/editor_chrome.css
+++ b/src/css/editor_chrome.css
@@ -555,6 +555,10 @@ html {
     line-height: 22px !important;
 }
 
+.monaco-workbench .part.sidebar>.title{
+    background: none !important;
+}
+
 .sidebar > .content {
     max-width: 100% !important;
     max-height: 96% !important;
